# AGL-Player

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.543cc9e  CMakeLists.txt.user.54bff05  GameInterface.h  GlobalTODO.md  LoggerMacros.h  NVDAController.cpp  NVDAController.h  TODO.md  TODO.txt  focusarrows.cpp  focusarrows.h  headerwindow.cpp  headerwindow.h  headerwindow.ui  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  manager.ui  managerwindow.cpp  managerwindow.h  managerwindow.ui  pluginInterface.h  pluginmanager.cpp  pluginmanager.h  readme.md  reference.json  resources.qrc  statemanager.cpp  statemanager.h  talkwrap.cpp  talkwrap.h  topwindow.cpp  topwindow.h  topwindow.ui  (+2 more)
plugins/: CMakeLists.txt
plugins/Basketball/: Basketball.json  CMakeLists.txt  basketball.cpp  basketball.h  enums.h  namespaces.h  structs.h
plugins/echo/: CMakeLists.txt  EchoInterface.h  echo.cpp  echo.h  echo.json
plugins/plugBasketball/: CMakeLists.txt  basketball.cpp  basketball.h  basketball_interface.h  engine_func.h  games.h  history.h  namespace.h  plugBasketball.json  plugclass.cpp  plugclass.h  structs.h
talk/: CMakeLists.txt
